Fix formatting on Delivery page

--- a/infrastructure/team/delivery/index.html.md.erb
+++ b/infrastructure/team/delivery/index.html.md.erb
@@ -191,7 +191,7 @@ The primary customer of the System team is the Delivery::Orchestration team.
 | S1/P1 Deployment/Release related issues | `@release-managers` | Slack |
 | Any Priority Deployment/Release related issues | `@gitlab-org/delivery` | GitLab |
 
-Release Managers have a weekday follow-the-sun rotation and can be reached via the '@release-managers' handle on Slack. For weekend support or other escalations please use the [Release Management Escalation](https://gitlab.pagerduty.com/escalation_policies#PPDMKX1) to reach Delivery Leaders. 
+Release Managers have a weekday follow-the-sun rotation and can be reached via the `@release-managers` handle on Slack. For weekend support or other escalations please use the [Release Management Escalation](https://gitlab.pagerduty.com/escalation_policies#PPDMKX1) to reach Delivery Leaders. 
 
 ### Project Management
 
