Add Nick Nguyen to Development leaders 2022 holiday coverage

--- a/development/index.html.md.erb
+++ b/development/index.html.md.erb
@@ -320,6 +320,7 @@ The schedule below covers the period from 2022-12-19 to 2023-01-02. To reach the
 | Tim Zallmann | GMT+1 (Vienna, Austria) | 2022-12-19 - 2022-12-22, 2022-12-28 - 2012-12-30 (for needed EMEA emergency coverage) |
 | Jerome Ng | GMT-8 (Vancouver, Canada) | 2022-12-19 ~ 2023-01-02  |
 | Michelle Gill | GMT-6 (Texas, USA) | 2022-12-19 - 2022-12-23 |
+| Nick Nguyen   | GMT-6 (Minnesota, USA) | 2022-12-19 - 2022-12-23, 2022-12-27 - 2022-01-02 |
 
 ### Developing and Tracking OKRs
 
