--- a/quality/quality-engineering/sec-data-science-qe-team/index.html.md.erb
+++ b/quality/quality-engineering/sec-data-science-qe-team/index.html.md.erb
@@ -40,11 +40,11 @@ Quality Engineering Manager: Vincy Wilson
 | S.No 	| Stage         	| Group                       | SET Counterpart                                                   |
 |------	|-----------------|-----------------------------|---------------------------------------------------------------------|
 | 1    	| [Anti-Abuse]    | [Anti-Abuse]                | TBH                                                                    	|
-| 2    	| [ModelOps]      | [Applied Machine Learning]  | Mark Lapierre                                                       |
+| 2    	| [ModelOps]      | [AI Assisted]  | Mark Lapierre                                                       |
 | 3    	| [ModelOps]      | [MLOps]                     | TBH                                                                 |
 | 4    	| [ModelOps]      | [DataOps]                   | TBH                                                                 |
 
-## OKRs 
+## OKRs
 
 Every quarter, the team commits to [Objectives and Key Results (OKRs)](/company/okrs/). The below shows current and previous quarter OKRs, it updates automatically as the quarter progresses.
 
@@ -73,6 +73,6 @@ Every quarter, the team commits to [Objectives and Key Results (OKRs)](/company/
 [Anti-Abuse]: /handbook/product/categories/#anti-abuse-stage
 [Anti-Abuse]: /handbook/product/categories/#anti-abuse-group
 [ModelOps]: /handbook/product/categories/#modelops-group
-[Applied Machine Learning]: /handbook/product/categories/#applied-machine-learning-group
+[AI Assisted]: /handbook/product/categories/#ai-assisted-group
 [MLOps]: /handbook/product/categories/#mlops-group
 [DataOps]: /handbook/product/categories/#dataops-group
