Data Science Section Direction Changes - AI Assisted

--- a/metrics/data-science/modelops/ai-assisted/index.html.md.erb
+++ b/metrics/data-science/modelops/ai-assisted/index.html.md.erb
@@ -1,6 +1,6 @@
 ---
 layout: handbook-page-toc
-title: "Applied ML Group Engineering Metrics"
+title: "AI Assisted Group Engineering Metrics"
 ---
 
 ## On this page
@@ -11,4 +11,3 @@ title: "Applied ML Group Engineering Metrics"
 
 
 <%= partial "handbook/engineering/metrics/partials/child_dashboard.erb", locals: { filter_type: "group", filter_value: "Applied-ml" } %>
-
