--- a/metrics/data-science/modelops/index.html.md.erb
+++ b/metrics/data-science/modelops/index.html.md.erb
@@ -10,9 +10,8 @@ title: "Model Ops Stage Engineering Metrics"
 {:toc .hidden-md .hidden-lg}
 
 ### Group Pages
-* [Applied ML Group Dashboards](/handbook/engineering/metrics/data-science/modelops/applied-ml/)
+* [AI Assisted Group Dashboards](/handbook/engineering/metrics/data-science/modelops/ai-assisted/)
 * [Data Ops Group Dashboards](/handbook/engineering/metrics/data-science/modelops/dataops/)
 * [ML Ops Group Dashboards](/handbook/engineering/metrics/data-science/modelops/mlops)
 
 <%= partial "handbook/engineering/metrics/partials/team_dashboard.erb", locals: { filter_type: "stage", filter_value: "ModelOps" } %>
-
