Data Science Section Direction Changes - AI Assisted

--- a/development/data-science/appliedml/index.html.md.erb
+++ b/development/data-science/appliedml/index.html.md.erb
@@ -1,7 +1,7 @@
 ---
 layout: handbook-page-toc
-title: Applied ML Group
-description: "The Applied ML is focused on how to extend GitLab functionality to provide additional value by leveraging ML/AI."
+title: AI Assisted Group
+description: "The AI Assisted gruop is focused on how to extend GitLab functionality to provide additional value by leveraging ML/AI."
 ---
 
 ## On this page
@@ -12,7 +12,7 @@ description: "The Applied ML is focused on how to extend GitLab functionality to
 
 ## Vision
 
-The applied ML group is focused on how to extend GitLab functionality to provide additional value by leveraging ML/AI. This group will build on existing successful GitLab categories and features to make them smarter, easier to use, and more intelligent.
+The AI Assisted group is focused on how to extend GitLab functionality to provide additional value by leveraging ML/AI. This group will build on existing successful GitLab categories and features to make them smarter, easier to use, and more intelligent.
 
 [Commit Virtual 2021: What the ML is up with DevOps and AI? A ModelOps Overview](https://www.youtube.com/watch?v=7mUgGFgab4E)
 
@@ -27,13 +27,13 @@ The applied ML group is focused on how to extend GitLab functionality to provide
 
 ## Direction
 
-[Group direction](https://about.gitlab.com/direction/modelops/applied_ml/)
+[Group direction](https://about.gitlab.com/direction/modelops/ai_assisted/)
 
 ## Team members
 
-The following people are permanent members of the Applied ML Group:
+The following people are permanent members of the AI Assisted Group:
 
-| Who | Role | 
+| Who | Role |
 | --- | --- |
 | [Alexander Chueshev](https://about.gitlab.com/company/team/#achueshev) | Senior backend engineer |
 | [Bruno Cardoso](https://about.gitlab.com/company/team) | Senior backend engineer |
@@ -44,11 +44,11 @@ The following people are permanent members of the Applied ML Group:
 ## How to contact us
 
 * Tag a team member in a merge request or issue
-* Post a message in the #g_applied_ml channel (internal only)
+* Post a message in the #g_ai_assisted channel (internal only)
 
 ## Initial focus
 
-Our initial focus is to integrate the acquired UnReview technology into GitLab, starting with the establishment of the Applied ML team in June of 2021. In a nutshell, UnReview is a machine learning (ML) based solution for automatically identifying appropriate expert code reviewers. The [press release](https://about.gitlab.com/press/releases/2021-06-02-gitlab-acquires-unreview-machine-learning-capabilities.html) has more details on the acquisition. Additional information on the UnReview technology and the integration process can be found on the [project page](https://about.gitlab.com/handbook/engineering/development/modelops/appliedml/projects/unreview/).
+Our initial focus is to integrate the acquired UnReview technology into GitLab, starting with the establishment of the AI Assisted team in June of 2021. In a nutshell, UnReview is a machine learning (ML) based solution for automatically identifying appropriate expert code reviewers. The [press release](https://about.gitlab.com/press/releases/2021-06-02-gitlab-acquires-unreview-machine-learning-capabilities.html) has more details on the acquisition. Additional information on the UnReview technology and the integration process can be found on the [project page](https://about.gitlab.com/handbook/engineering/development/modelops/ai-assisted/projects/unreview/).
 
 ## Project management process
 
@@ -60,7 +60,7 @@ Our team use the following workflow stages defined in the [Product Development F
 
 ### Epic roadmap
 
-We use an epic roadmap to track epic progress on a quarterly basis. 
+We use an epic roadmap to track epic progress on a quarterly basis.
 
 ### Issue boards
 
@@ -104,7 +104,7 @@ We use issue labels to keep us organized. Every issue has a set of required labe
 
 **Required labels**
 - Stage: `~devops::modelops`
-- Group: `~group::applied ML`
+- Group: `~group::AI Assisted`
 
 ### Merge request labels
 
@@ -112,7 +112,7 @@ MR labels can mirror issue labels (which is automatically done when created from
 
 **Required labels**
 - Stage: `~devops::modelops`
-- Group: `~group::applied ML`
+- Group: `~group::AI Assisted`
 
 ### Milestones
 
@@ -124,7 +124,7 @@ Our group holds synchronous meetings to gain additional clarity and alignment on
 
 We have a weekly team meeting at 8am Pacific on Thursdays.
 
-Meetings will be in the [`Applied ML Group` playlist in GitLab Unfiltered](https://www.youtube.com/playlist?list=PL05JrBw4t0Kp5fbMFUOKl-uroknEjofJ3)
+Meetings will be in the [`AI Assisted Group` playlist in GitLab Unfiltered](https://www.youtube.com/playlist?list=PL05JrBw4t0Kp5fbMFUOKl-uroknEjofJ3)
 
 ### Technical Architecture
 
@@ -136,17 +136,15 @@ The team primary codes in python and as part of Ml workflows we build pipelines 
 
 We are always exploring new tools and frameworks to optimize the ML workflow . Currently we here are things we are exploring
 
-- Clickhouse Datastore to store Model data for Applied ML
+- Clickhouse Datastore to store Model data for AI Assisted
 - Pytorch as a framework
 - Opensource tools for Model Monitoring and Observability
 
 ### Demos
 
-We periodically showcase demos and if there is any specefic demo on Machine learning that would be beneficial we would love to hear from you . Here is a list 
+We periodically showcase demos and if there is any specefic demo on Machine learning that would be beneficial we would love to hear from you . Here is a list
 
 - [CI/CD for Machine-learning](https://www.youtube.com/watch?v=7mUgGFgab4E)
 - [Suggested Reviewer MLOPS pipeline using Gitlab]
 
 <%= partial "handbook/engineering/metrics/partials/_cross_functional_dashboard.erb", locals: { filter_value: "Applied Ml" } %>
-
-
