--- a/development/data-science/index.html.md.erb
+++ b/development/data-science/index.html.md.erb
@@ -12,7 +12,7 @@ description: "The Data Science stage is focused on leveraging ML in the GitLab p
 
 ## Groups
 
-* [Applied ML](./appliedml/)
+* [AI Assisted](./ai-assisted/)
 * [Anti-abuse](./anti-abuse/)
 
 ### Business Continuity - Coverage and Escalation
