--- a/development/ops/package/container-registry/index.html.md.erb
+++ b/development/ops/package/container-registry/index.html.md.erb
@@ -45,6 +45,17 @@ We measure the value we contribute by using [performance indicator metrics](/han
 
 <%= partial "handbook/engineering/metrics/partials/_cross_functional_dashboard.erb", locals: { filter_value: "Container Registry" } %>
 
+### What Are We Working On
+
+Here is a list of active projects and initiatives that we are currently working on, along with the corresponding [DRI](https://about.gitlab.com/handbook/people-group/directly-responsible-individuals/):
+
+| Project                                                                                                                                        | DRI                                          |
+|------------------------------------------------------------------------------------------------------------------------------------------------|----------------------------------------------|
+| [Release container registry with metadata database and online GC for self-managed installs](https://gitlab.com/groups/gitlab-org/-/epics/5521) | [@hswimelar](https://gitlab.com/hswimelar)   |
+| [Storage and limits management for the Container Registry](https://gitlab.com/groups/gitlab-org/-/epics/7225)                                  | [@jdrpereira](https://gitlab.com/jdrpereira) |
+| [Container Registry AMAU: Track usage](https://gitlab.com/groups/gitlab-org/-/epics/8213)                                                      | [@jaime](https://gitlab.com/jaime)           |
+| [Allow renaming/moving groups and projects with container repositories](https://gitlab.com/groups/gitlab-org/-/epics/9459)                     | TBD                                          |
+
 ## Documentation
 
 Project documentation is available [here](/product/container-registry/).
