add company timeline

--- a/product/product-okrs/index.html.md.erb
+++ b/product/product-okrs/index.html.md.erb
@@ -9,12 +9,11 @@ title: Product Division OKRs
 {:toc .hidden-md .hidden-lg}
 
 
-
 <%= partial("handbook/product/product-handbook-links") %>
 
 ## Product Division OKR Overview
 
-For an overview of our overall approach to OKRs, visit [Objectives and Key Results (OKRs)](https://about.gitlab.com/company/okrs/). 
+For an overview of our overall approach to OKRs, as well as any company-wide OKR due dates, visit [Objectives and Key Results (OKRs)](https://about.gitlab.com/company/okrs/). 
 
 ### General timeline and process 
 
@@ -47,10 +46,10 @@ This page provides an overview of the Product Division OKR workflow. All departm
 ### Current quarter OKR references
 This section will be updated by Product Operations quarterly. 
 
-
 - [FY23 Q4 Product Division OKRs](https://gitlab.com/groups/gitlab-com/-/epics/2050)
 - [FY23 Q4 OKR overview video](https://youtu.be/lnaKB1P28S4)
 - [FY23 Q4 feedback issue](https://gitlab.com/gitlab-com/Product/-/issues/5212)
+- [FY24 Q1 company-wide OKR timeline](https://about.gitlab.com/company/okrs/fy24-q1/#okr-schedule)
 
 #### Past Quarters
 
