Update Geekbot instructions

--- a/product/ux/technical-writing/index.html.md.erb
+++ b/product/ux/technical-writing/index.html.md.erb
@@ -487,10 +487,10 @@ who will review all their work (including reviews they perform of other authors)
 before merging it or approving it for another maintainer to merge.
 They may share the burden of these reviews with other Technical Writers.
 
-## Daily standups
+## Standups
 
-We have set up [Geekbot](https://app.geekbot.com/dashboard/home) for our daily
-standups (at 10:00 AM, in your local timezone) and a random weekly question
+We have set up [Geekbot](https://app.geekbot.com/dashboard/home) for our twice weekly
+standups (at 10:00 AM, Tuesday and Thursday, in your local timezone) and a random weekly question
 (run on Wednesdays at 12:00 PM).
 
 All members can edit and manage the standups.
@@ -499,7 +499,7 @@ To add a new member to the daily standup:
 
 1. Visit the [Geekbot dashboard](https://app.geekbot.com/dashboard/home) and
    sign in using your Slack account when asked.
-1. Select the [Morning Stretch](https://app.geekbot.com/dashboard/standup/42533/manage?members)
+1. Select the [Tues/Thurs ping](https://app.geekbot.com/dashboard/standup/42533/manage?members)
    standup and search the member by name in the **Add participants** area.
 1. Give the newly-added member Manage access and select **Save** in the upper
    right corner.
