Update December 20th GC DRI

--- a/infrastructure/index.html.md.erb
+++ b/infrastructure/index.html.md.erb
@@ -181,7 +181,7 @@ Quick checklist for the host (time order):
 |August 11|Anna Liisa M|
 |September 22|Rachel N|
 |November 8|Liam M|
-|December 20|Oriol L|
+|December 20|Michele B|
 |TBD|Anthony F|
 
 ##### GitLab SaaS Infrastructure
