Include Slack bookmarks into team page

--- a/development/ops/verify/pipeline-execution/index.html.md.erb
+++ b/development/ops/verify/pipeline-execution/index.html.md.erb
@@ -70,9 +70,15 @@ To find our stable counterparts, look at the Pipeline Execution [product categor
 
 ## Useful Links
 
- * [Issue Tracker: `~group::pipeline execution`](https://gitlab.com/groups/gitlab-org/-/issues?label_name%5B%5D=group%3A%3Apipeline+execution&scope=all)
- * [Slack Channel: `#g_pipeline-execution`](https://gitlab.slack.com/archives/CPCJ8CCCX)
- * [GitLab Unfiltered: Pipeline Execution group](https://www.youtube.com/playlist?list=PL05JrBw4t0KpsVi6PG4PvDaVM8lKmB6lV)
+ * [Issue tracker: `~group::pipeline execution`](https://gitlab.com/groups/gitlab-org/-/issues?label_name%5B%5D=group%3A%3Apipeline+execution&scope=all)
+ * [Slack channel: `#g_pipeline-execution`](https://gitlab.slack.com/archives/CPCJ8CCCX)
+ * [GitLab unfiltered: Pipeline Execution group](https://www.youtube.com/playlist?list=PL05JrBw4t0KpsVi6PG4PvDaVM8lKmB6lV)
+ * [Grafana dashboard](https://dashboards.gitlab.net/d/stage-groups-pipeline_execution/stage-groups-group-dashboard-verify-pipeline-execution?orgId=1)
+ * [Sisense dashboard](https://app.periscopedata.com/app/gitlab/983566/Pipeline-Execution-Dashboard)
+ * [Next planning issue](https://gitlab.com/gitlab-org/ci-cd/pipeline-execution/-/issues/?sort=popularity&state=opened&label_name%5B%5D=Planning%20Issue&first_page_size=20)
+ * [Current milestome retro](https://gitlab.com/gl-retrospectives/verify-stage/pipeline-execution/-/issues?search=Pipeline+Execution+retrospective&sort=popularity&state=opened)
+ * [Needs weight board](https://gitlab.com/groups/gitlab-org/-/boards/4178322?label_name%5B%5D=group%3A%3Apipeline%20execution&label_name%5B%5D=needs%20weight)
+ * [Current milestone board](https://gitlab.com/groups/gitlab-org/-/boards/1372896?label_name[]=group%3A%3Apipeline%20execution&milestone_title=Started)
 
 ### Development Docs
 
